--- a/content/nixos-distro.mdx
+++ b/content/nixos-distro.mdx
@@ -1,13 +1,18 @@
 ---
-title: "NixOS: A Purely Functional Linux Distribution"
-date: "2025-12-08"
-excerpt: "In meme lang: The ultimate boss of distro fight"
-tags: ["Nix", "NixOS", "Distro", "Linux"]
+title: 'NixOS: A Purely Functional Linux Distribution'
+date: '2025-12-08'
+excerpt: 'In meme lang: The ultimate boss of distro fight'
+tags: ['Nix', 'NixOS', 'Distro', 'Linux']
 ---
 
-<img src="/nixos-logo-rainbow-gradient-black-regular-horizontal-recommended.svg" alt="NixOS" className="w-full h-[100px]" /> 
-NixOS: A Purely Functional Linux Distribution
-Hey, glad you found this blog — it’s a good one. Let me start with a quick story about how I discovered this absolute banger of a distro.
+<img
+  src="/nixos-logo-rainbow-gradient-black-regular-horizontal-recommended.svg"
+  alt="NixOS"
+  className="h-[100px] w-full"
+/>
+NixOS: A Purely Functional Linux Distribution Hey, glad you found this blog —
+it’s a good one. Let me start with a quick story about how I discovered this
+absolute banger of a distro.
 
 Back in college, we had a Linux course. Around that time, one of my classmates told me to dual boot Linux. At first, I had no clue what “dual boot” even meant. I Googled it and figured out that it just means running two operating systems on one machine.
 
